--- a/index.html
+++ b/index.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/c73e546f17.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">    
     <title>JobFinder</title>
 </head>
 <body>
-    <h1>JobFinder</h1>
-    <i class="fas fa-camera"></i>	
-  
+    <div class="container">
+        <header>
+            <nav>
+                <div class="nav-container">
+                    <img src="img/logo.png" alt="JobFinder" id="logo">
+                    <ul>
+                        <li><a href="#">Encontrar vaga</a></li>
+                        <li><a href="#">Enviar vaga</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>  
+                </div>
+            </nav>
+            <div id="main-banner">
+                <div id="search-form">
+                    <h1>A maneira mais fácil de encontrar seu novo emprego</h1>
+                    <p>Conecte-se de forma gratuita as melhores empresas e consiga o emprego
+                        dos seus sonhos.
+                    </p>
+                    <form>
+                        <input type="text" name="job" placeholder="Digite o cargo">
+                        <select name="region">
+                            <option value="">Todos os estados</option>
+                        </select>
+                        <select name="category">
+                            <option value="">Categoria</option>
+                        </select>
+                        <input type="submit" value="Pesquisar">
+                    </form>
+                </div>
+            </div>
+        </header>
+    </div>
+    <script src="https://kit.fontawesome.com/c73e546f17.js"></script>
 </body>
 </html>
