adicionado secao enviar vaga

--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
                 <a href="#" class="btn-jobs">Ver mais vagas</a>
             </div>
         </main>
+        <section id="sendjobs-container">
+            <div id="sendjobs-inner" class="wrapper">
+                <h2>Envie uma vaga que será vista por milhares de candidatos</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque tenetur deleniti illo quas aliquam, porro reprehenderit molestiae consectetur alias possimus earum sint eum quam rerum cum officiis dolor tempore sit.</p>
+                <a href="#" class="light-btn">Enviar vaga</a>
+            </div>
+        </section>
     </div>
     <script src="https://kit.fontawesome.com/c73e546f17.js"></script>
 </body>
