--- a/index.html
+++ b/index.html
@@ -126,6 +126,50 @@
                 <a href="#" class="light-btn">Enviar vaga</a>
             </div>
         </section>
+        <section id="status-container" class="wrapper">
+            <h2 class="title-center">
+                Estatísticas do JobFinder
+            </h2>
+            <p class="p-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Delectus laudantium illo et harum fuga debitis qui impedit molestias, dolores veritatis quae nemo eius aperiam pariatur, voluptate tenetur consectetur aliquam assumenda.
+            </p>
+            <div>
+                <div class="status-box">
+                    <span class="status-qtd">
+                        150
+                    </span>
+                    <p class="status-text">
+                        Vagas abertas
+                    </p>
+                </div>
+                <div class="status-box">
+                    <span class="status-qtd">
+                        250
+                    </span>
+                    <p class="status-text">
+                        Candidatos contratados
+                    </p>
+                </div>
+                <div class="status-box">
+                    <span class="status-qtd">
+                        50
+                    </span>
+                    <p class="status-text">
+                        Empresas participantes
+                    </p>
+                </div>
+                <div class="status-box">
+                    <span class="status-qtd">
+                        550
+                    </span>
+                    <p class="status-text">
+                        Candidatos
+                    </p>
+                </div>
+            </div>
+        </section>
+
     </div>
     <script src="https://kit.fontawesome.com/c73e546f17.js"></script>
 </body>
